deps/crates/vendor/anyhow/tests/ui/wrong-interpolation.stderr
error: 1 positional argument in format string, but no arguments were given
 --> tests/ui/wrong-interpolation.rs:4:12
  |
4 |     bail!("{} not found");
  |            ^^
