deps/crates/vendor/anyhow/tests/ui/wrong-interpolation.rs
use anyhow::{bail, Result};

fn main() -> Result<()> {
    bail!("{} not found");
}
